<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <!-- Action Bar -->
    <!--<include-->
        <!--android:visibility="gone"-->
        <!--android:id="@+id/sub_view_action_bar"-->
        <!--layout="@layout/sub_view_action_bar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/action_bar_height"></include>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_m"
            android:layout_margin="@dimen/app_cell_padding"
            android:text="@string/setting_title_settings"
            android:textColor="@color/colorAccent"
            android:gravity="left"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor"></View>

        <RelativeLayout
            android:id="@+id/fragment_setting_settings_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/app_cell_padding">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/cell_arrow_right"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_m"
                    android:text="@string/setting_menu_user_info"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_s"
                    android:text="@string/setting_menu_user_info_description"
                    />

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor"></View>

        <RelativeLayout
            android:id="@+id/fragment_setting_user_info_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/app_cell_padding">

            <ImageButton
                android:id="@+id/fragment_setting_user_info_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/cell_arrow_right"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_m"
                android:text="@string/setting_title_user_info"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor"></View>

        <RelativeLayout
            android:id="@+id/fragment_setting_push_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/app_cell_padding">

            <ImageButton
                android:id="@+id/fragment_setting_push_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/cell_arrow_right"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_m"
                android:text="プッシュ通知設定"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor"></View>
        <RelativeLayout
            android:id="@+id/fragment_setting_mypage_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/app_cell_padding">

            <ImageButton
                android:id="@+id/fragment_setting_mypage_block_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/cell_arrow_right"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_toRightOf="@id/fragment_setting_mypage_block_arrow"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_m"
                    android:text="@string/setting_menu_my_page"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_s"
                    android:text="@string/setting_menu_my_page_description"
                    />
            </LinearLayout>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor"></View>
        <RelativeLayout
            android:id="@+id/fragment_setting_logout_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/app_cell_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_m"
                android:text="@string/setting_title_logout"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor"></View>
    </LinearLayout>

</LinearLayout>
